[gd_scene load_steps=7 format=3 uid="uid://cccefhbwa2gdy"]

[ext_resource type="Texture2D" uid="uid://clo0jy1n4y6xk" path="res://Assets/Seasonal Tilesets/5 - Misc. universal tiles/Falling_platform.png" id="1_c5bym"]
[ext_resource type="Script" path="res://Scripts/falling_platform.gd" id="1_rcs4n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xpr4o"]
size = Vector2(32, 16)

[sub_resource type="Animation" id="Animation_uw3ud"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FallingPlatform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lhcu6"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FallingPlatform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r52wu"]
_data = {
"RESET": SubResource("Animation_uw3ud"),
"shake": SubResource("Animation_lhcu6")
}

[node name="falling_platform" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_rcs4n")

[node name="FallingPlatform" type="Sprite2D" parent="."]
texture = ExtResource("1_c5bym")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_xpr4o")
one_way_collision = true

[node name="Respawn" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r52wu")
}
speed_scale = 2.0

[connection signal="timeout" from="Respawn" to="." method="_on_respawn_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
